--- a/index.html
+++ b/index.html
@@ -65,7 +65,47 @@
           </div>
           <h2>Our team</h2>
           <div>
-            
+            <ul id="students-list">
+              <li>
+                <div class="student-card">
+                  <div>
+                  <img class="student-image" src="assets/team.jpeg" />
+                  </div>
+                  <div class="text-block">
+                    <h3>John Doe</h3>
+                    <p>Software Engineering Student</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="student-card">
+                  <img class="student-image" src="assets/team.jpeg" />
+                  <h3>John Doe</h3>
+                  <p>Software Engineering Student</p>
+                </div>
+              </li>
+              <li>
+                <div class="student-card">
+                  <img class="student-image" src="assets/team.jpeg" />
+                  <h3>John Doe</h3>
+                  <p>Software Engineering Student</p>
+                </div>
+              </li>
+              <li>
+                <div class="student-card">
+                  <img class="student-image" src="assets/team.jpeg" />
+                  <h3>John Doe</h3>
+                  <p>Software Engineering Student</p>
+                </div>
+              </li>
+              <li>
+                <div class="student-card">
+                  <img class="student-image" src="assets/team.jpeg" />
+                  <h3>John Doe</h3>
+                  <p>Software Engineering Student</p>
+                </div>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
