--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Home</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="assets/white-logo.svg" />
   </head>
   <body>
     <div id="page-header">
@@ -11,8 +12,7 @@
         <nav>
           <!--Bloque de imagotipo-->
           <div id="header-logo-container">
-            <img id="header-logo" src="assets/logo.png" alt="Logo" />
-            <h1 id="logo-title" class="title">Comerxia</h1>
+            <img id="header-logo" src="assets/original-isologo.svg" alt="Logo" />
           </div>
           <!--Bloque de opciones-->
           <div>
@@ -41,12 +41,12 @@
           <h1 class="font-white">
             The world's <strong>#1</strong> platform to manage<br />your sales
           </h1>
-          <button id="banner-button">Get Started</button>
+          <button class="solid-4">Get Started</button>
         </div>
       </section>
       <section id="about-us">
         <div>
-          <h1>About us</h1>
+          <h2>About us</h2>
           <div>
             <img src="assets/team.jpeg" />
           </div>
@@ -63,13 +63,13 @@
               sales data with ease.
             </p>
           </div>
-          <h2>Our team</h2>
+          <h3>Our team</h3>
           <div>
             <ul id="students-list">
               <li>
                 <div class="student-card">
                   <div>
-                  <img class="student-image" src="assets/team.jpeg" />
+                  <img class="student-image" src="assets/user.png" />
                   </div>
                   <div class="text-block">
                     <h3>John Doe</h3>
@@ -79,28 +79,28 @@
               </li>
               <li>
                 <div class="student-card">
-                  <img class="student-image" src="assets/team.jpeg" />
+                  <img class="student-image" src="assets/user.png" />
                   <h3>John Doe</h3>
                   <p>Software Engineering Student</p>
                 </div>
               </li>
               <li>
                 <div class="student-card">
-                  <img class="student-image" src="assets/team.jpeg" />
+                  <img class="student-image" src="assets/user.png" />
                   <h3>John Doe</h3>
                   <p>Software Engineering Student</p>
                 </div>
               </li>
               <li>
                 <div class="student-card">
-                  <img class="student-image" src="assets/team.jpeg" />
+                  <img class="student-image" src="assets/user.png" />
                   <h3>John Doe</h3>
                   <p>Software Engineering Student</p>
                 </div>
               </li>
               <li>
                 <div class="student-card">
-                  <img class="student-image" src="assets/team.jpeg" />
+                  <img class="student-image" src="assets/user.png" />
                   <h3>John Doe</h3>
                   <p>Software Engineering Student</p>
                 </div>
