Fixed image overlapping text. Fix "about us" float

--- a/index.html
+++ b/index.html
@@ -45,24 +45,25 @@
         </div>
       </section>
       <section id="about-us">
-        <div>
           <h2>About us</h2>
           <div>
-            <img src="assets/team.jpeg" />
-          </div>
-          <div>
-            <p>
-              "Comerxia" is an innovative application designed for business
-              owners and medium-sized companies. It helps users manage their
-              sales effectively by providing features such as detailed sales
-              reports, billing assistance, and customization options. With
-              "Comerxia," users can gain insights into their sales performance,
-              make informed investment decisions, and easily adapt the
-              application as their business grows. It streamlines sales
-              management and empowers business owners to track and analyze their
-              sales data with ease.
-            </p>
-          </div>
+            <div>
+              <img src="assets/team.jpeg" />
+            </div>
+            <div>
+              <p>
+                "Comerxia" is an innovative application designed for business
+                owners and medium-sized companies. It helps users manage their
+                sales effectively by providing features such as detailed sales
+                reports, billing assistance, and customization options. With
+                "Comerxia," users can gain insights into their sales performance,
+                make informed investment decisions, and easily adapt the
+                application as their business grows. It streamlines sales
+                management and empowers business owners to track and analyze their
+                sales data with ease.
+              </p>
+            </div>
+          <div style="min-height: 50px;"></div>
           <h3>Our team</h3>
           <div>
             <ul id="students-list">
