Added benefits and subscriptions. Format about us.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         <nav>
           <!--Bloque de imagotipo-->
           <div id="header-logo-container">
-            <img id="header-logo" src="assets/original-isologo.svg" alt="Logo" />
+            <img
+              id="header-logo"
+              src="assets/original-isologo.svg"
+              alt="Logo"
+            />
           </div>
           <!--Bloque de opciones-->
           <div>
@@ -45,74 +49,120 @@
         </div>
       </section>
       <section id="about-us">
-          <h2>About us</h2>
+        <div>
+          <h1>About us</h1>
+          <div id="about-us-container">
+            <img id="about-us-image" src="assets/team2.jpg" />
+            <p id="about-us-text">
+              "Comerxia" is an innovative application designed for business
+              owners and medium-sized companies. It helps users manage their
+              sales effectively by providing features such as detailed sales
+              reports, billing assistance, and customization options. With
+              "Comerxia," users can gain insights into their sales performance,
+              make informed investment decisions, and easily adapt the
+              application as their business grows. It streamlines sales
+              management and empowers business owners to track and analyze their
+              sales data with ease.
+            </p>
+          </div>
           <div>
-            <div>
-              <img src="assets/team.jpeg" />
+            <h3>Our team</h3>
+            <div id="students-list">
+              <div class="student-card">
+                <div>
+                  <img class="student-image" src="assets/user.png" />
+                  <h3>Sheyla Samira Pastor Ccasani</h3>
+                  <p>Systems Engineering Student</p>
+                </div>
+              </div>
+              <div class="student-card">
+                <img class="student-image" src="assets/user.png" />
+                <h3>Diego Fabian Cancho Coila</h3>
+                <p>Software Engineering Student</p>
+              </div>
+              <div class="student-card">
+                <img class="student-image" src="assets/user.png" />
+                <h3>Diego Arturo Huincho Lapa</h3>
+                <p>Software Engineering Student</p>
+              </div>
+              <div class="student-card">
+                <img class="student-image" src="assets/user.png" />
+                <h3>Fabio Sebastian Portella Nina</h3>
+                <p>Systems Engineering Student</p>
+              </div>
+              <div class="student-card">
+                <img class="student-image" src="assets/user.png" />
+                <h3>Kenneth Pedro Chipana Zambrano</h3>
+                <p>Systems Engineering Student</p>
+              </div>
+              <div class="student-card">
+                <img class="student-image" src="assets/user.png" />
+                <h3>Gustavo Adolfo Pardo Zapata</h3>
+                <p>Software Engineering Student</p>
+              </div>
             </div>
-            <div>
-              <p>
-                "Comerxia" is an innovative application designed for business
-                owners and medium-sized companies. It helps users manage their
-                sales effectively by providing features such as detailed sales
-                reports, billing assistance, and customization options. With
-                "Comerxia," users can gain insights into their sales performance,
-                make informed investment decisions, and easily adapt the
-                application as their business grows. It streamlines sales
-                management and empowers business owners to track and analyze their
-                sales data with ease.
-              </p>
-            </div>
-          <div style="min-height: 50px;"></div>
-          <h3>Our team</h3>
-          <div>
-            <ul id="students-list">
-              <li>
-                <div class="student-card">
-                  <div>
-                  <img class="student-image" src="assets/user.png" />
-                  </div>
-                  <div class="text-block">
-                    <h3>John Doe</h3>
-                    <p>Software Engineering Student</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="student-card">
-                  <img class="student-image" src="assets/user.png" />
-                  <h3>John Doe</h3>
-                  <p>Software Engineering Student</p>
-                </div>
-              </li>
-              <li>
-                <div class="student-card">
-                  <img class="student-image" src="assets/user.png" />
-                  <h3>John Doe</h3>
-                  <p>Software Engineering Student</p>
-                </div>
-              </li>
-              <li>
-                <div class="student-card">
-                  <img class="student-image" src="assets/user.png" />
-                  <h3>John Doe</h3>
-                  <p>Software Engineering Student</p>
-                </div>
-              </li>
-              <li>
-                <div class="student-card">
-                  <img class="student-image" src="assets/user.png" />
-                  <h3>John Doe</h3>
-                  <p>Software Engineering Student</p>
-                </div>
-              </li>
-            </ul>
           </div>
         </div>
       </section>
       <section id="services">
         <div>
           <h1>Services</h1>
+          <div id="services-cards">
+            <div>
+              <img class="service-image" src="assets/calculations.jpg" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="benefits">
+        <div>
+          <h1>Benefits</h1>
+        </div>
+        <div id="benefits-container">
+          <div class="benefit-card">
+            <img class="benefit-card-icon" src="assets/user.png">
+          </div>
+          <div class="benefit-card">
+            <img class="benefit-card-icon" src="assets/user.png">
+          </div>
+          <div class="benefit-card">
+            <img class="benefit-card-icon" src="assets/user.png">
+          </div>
+          <div class="benefit-card">
+            <img class="benefit-card-icon" src="assets/user.png">
+          </div>
+          <div class="benefit-card">
+            <img class="benefit-card-icon" src="assets/user.png">
+            <p>Hello</p>
+          </div>
+          <div class="benefit-card">
+            <img class="benefit-card-icon" src="assets/user.png">
+          </div>
+        </div>
+      </section>
+      <section id="subscriptions">
+        <div id="basic-subscription" class="subscription">
+          <div class="subscription-box">
+            <h2 class="subscription-title">Plan Basic</h2>
+            <p class="subscription-price">$9.99/mes</p>
+            <ul class="subscription-features">
+              <li>Free</li>
+              <li>Manage your sales</li>
+            </ul>
+            <button>Mostrar más</button>
+          </div>
+        </div>
+        
+        <div id="pro" class="subscription">
+          <div class="subscription-box">
+            <h2 class="subscription-title">Plan Pro</h2>
+            <p class="subscription-price">$19.99/mes</p>
+            <ul class="subscription-features">
+              <li>No ads</li>
+              <li>You can learn to manage your business well</li>
+            </ul>
+            <button>Mostrar más</button>
+          </div>
         </div>
       </section>
     </div>
