--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div id="students-list">
               <div class="student-card">
                 <div>
-                  <img class="student-image" src="assets/user.png" />
+                  <img class="student-image" src="assets/sheyla.svg" />
                   <h3>Sheyla Pastor Ccasani</h3>
                   <p>Systems Engineering Student</p>
                 </div>
@@ -166,9 +166,8 @@
           <div id="basic-subscription" class="subscription">
             <div class="subscription-box">
               <h2 class="subscription-title">Plan Basic</h2>
-              <p class="subscription-price">$9.99/mes</p>
+              <p class="subscription-price">Free forever!</p>
               <ul class="subscription-features">
-                <li>Free</li>
                 <li>Manage your sales</li>
               </ul>
               <button class="solid-4">Mostrar más</button>
