--- a/register.html
+++ b/register.html
@@ -43,6 +43,9 @@
             />
             <input type="submit" value="Log in" />
             <p>
+                <h1>
+                    holamundo
+                </h1>
                 Have an account already? <a href="login.html">Log in</a>
             </p>
         </form>
